--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ http://www.templatemo.com/tm-501-neaty
 
                             <!-- Second Gallery section -->     
                             <section id="secondgallery" class="tm-section">
-                                <header><h2 class="tm-blue-text tm-section-title tm-margin-b-30">Second Gallery</h2></header>
+                                <header><h2 class="tm-blue-text tm-section-title tm-margin-b-30">Галлерея два</h2></header>
                                 <div class="tm-gallery-container tm-gallery-2">
                                     <div class="tm-img-container tm-img-container-2">
                                         <a href="img/neaty-08.jpg"><img src="img/neaty-08.jpg" alt="Image" class="img-fluid tm-img-tn"></a>    
@@ -130,7 +130,7 @@ http://www.templatemo.com/tm-501-neaty
 
                             <!-- Third Gallery section -->     
                             <section id="thirdgallery" class="tm-section">
-                                <header><h2 class="tm-blue-text tm-section-title tm-margin-b-30">Third Gallery</h2></header>
+                                <header><h2 class="tm-blue-text tm-section-title tm-margin-b-30">Галлерея три</h2></header>
                                 <div class="tm-gallery-container tm-gallery-3">
                                     <div class="tm-img-container tm-img-container-3">
                                         <a href="img/neaty-11.jpg"><img src="img/neaty-11.jpg" alt="Image" class="img-fluid tm-img-tn"></a>    
@@ -149,7 +149,7 @@ http://www.templatemo.com/tm-501-neaty
 
                             <!-- Contact Us section -->
                             <section id="contact" class="tm-section">
-                                <header><h2 class="tm-blue-text tm-section-title tm-margin-b-30">Contact Us</h2></header>
+                                <header><h2 class="tm-blue-text tm-section-title tm-margin-b-30">Свяжитесь с нами</h2></header>
 
                                 <div class="row">
                                     <div class="col-lg-6">
